--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "node": "^16.13.2",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
